add some security feature

--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -75,7 +75,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'aboutpr_page'%}"> persian language </a>
+                <a class="nav-link" href="{% url 'diabetespr_page'%}"> persian language </a>
               </li>
             </ul>
             <form class="form-inline ">
