--- a/digweb/digweb/templates/persianPage/cvdpr.html
+++ b/digweb/digweb/templates/persianPage/cvdpr.html
@@ -196,7 +196,7 @@ var page_number=1;
           <a href="{% url 'strokepr_page'%}">
             <img src="{% static 'images/s4.png' %}" alt="" />
             <br>
-            پیش بینی سکته
+            پیش بینی سکته مغزی
           </a>
         </div>
       </div>
