--- a/digweb/digweb/templates/persianPage/diabetespr.html
+++ b/digweb/digweb/templates/persianPage/diabetespr.html
@@ -207,7 +207,7 @@
             <a href="{% url 'strokepr_page'%}">
               <img src="{% static 'images/s4.png' %}" alt="" />
               <br>
-              پیش بینی سکته
+              پیش بینی سکته مغزی
             </a>
           </div>
         </div>
