--- a/digweb/digweb/templates/persianPage/indexpr.html
+++ b/digweb/digweb/templates/persianPage/indexpr.html
@@ -109,7 +109,7 @@
                   <div class="detail-box">
                     <div>
                       <h1>
-                        سکته
+                        سکته مغزی
                       </h1>
                       <p>
                         سکته مغزی که گاهی حمله مغزی نیز نامیده می شود، زمانی اتفاق می افتد که چیزی جریان خون بخشی از مغز را مسدود می کند یا زمانی که یک رگ خونی در مغز می ترکد. در هر صورت، بخش‌هایی از مغز آسیب دیده یا می‌میرند. سکته مغزی می تواند باعث آسیب مغزی پایدار، ناتوانی طولانی مدت یا حتی مرگ شود </p>
@@ -599,17 +599,16 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Clark Norris
+                    <!--Clark Norris-->
                   </h5>
                   <h6>
-                    Default model text
+                    <!--Default model text-->
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
-              </p>
+                <!--editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various-->              </p>
             </div>
           </div>
           <div class="carousel-item">
@@ -617,17 +616,16 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Chris Jonas
+                    <!--Chris Jonas-->
                   </h5>
                   <h6>
-                    Default model text
+                    <!--Default model text-->
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
-              </p>
+                <!--Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.-->              </p>
             </div>
           </div>
           <div class="carousel-item">
@@ -635,16 +633,16 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Brad Johns
+                    <!--Brad Johns-->
                   </h5>
                   <h6>
-                    Default model text
+                    <!--Default model text-->
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
+                <!--Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various-->
               </p>
             </div>
           </div>
