--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -214,7 +214,7 @@
           <a href="{% url 'strokepr_page'%}">
             <img src="{% static 'images/s4.png' %}" alt="" />
             <br>
-            پیش بینی سکته
+             پیش بینی سکته مغزی
           </a>
         </div>
       </div>
