--- a/digweb/digweb/templates/persianPage/servicepr.html
+++ b/digweb/digweb/templates/persianPage/servicepr.html
@@ -127,7 +127,7 @@
             <a href="{% url 'strokepr_page'%}">
               <img src="{% static 'images/s4.png' %}" alt="" />
               <br>
-              پیش بینی سکته
+              پیش بینی سکته مغزی
             </a>
           </div>
         </div>
