--- a/digweb/digweb/templates/persianPage/strokepr.html
+++ b/digweb/digweb/templates/persianPage/strokepr.html
@@ -88,7 +88,7 @@
         <div class="col">
           <form id="post-stroke">{%csrf_token%}
             <h4>
-              پیش بینی سکته
+              پیش بینی سکته مغزی
               <span class="design_dot"></span>
             </h4>
             <div class="form-row ">
