change email address etc.

--- a/digweb/digweb/templates/persianPage/indexpr.html
+++ b/digweb/digweb/templates/persianPage/indexpr.html
@@ -703,7 +703,7 @@
                 خانه هوش مصنوعی
               </h5>
               <p>
-                خانه هوش مصنوعی یکی از زیرمجموعه های صنعت الکترواپتیک ایران (صاپا) است که با هدف توسعه هوش مصنوعی فعالیت می کند
+                خانه هوش مصنوعی که با هدف توسعه هوش مصنوعی فعالیت می کند
   
               </p>
             </div>
@@ -719,7 +719,7 @@
                   <i class="fa fa-map-marker" aria-hidden="true"></i> مکان: اصفهان، استان اصفهان، خیابان استاد فلاطوری، مرکز خرید پاسارگاد
                 </a>
                 <a href="">
-                  <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
+                  <i class="fa fa-envelope" aria-hidden="true"></i> info@eclinichub.org
                 </a>
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i> شماره تماس :34597406-031
