--- a/digweb/digweb/templates/openVeiw/disscuseffect.html
+++ b/digweb/digweb/templates/openVeiw/disscuseffect.html
@@ -150,7 +150,7 @@
               AI TEC
             </h5>
             <p>
-              AI TEC one subset of Electrooptics Industry IRAN (SAPA) which works with the purpose of developing artificial intelligence
+              AI TEC which works with the purpose of developing artificial intelligence
 
             </p>
           </div>
@@ -166,7 +166,7 @@
                 <i class="fa fa-map-marker" aria-hidden="true"></i> Location : Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
               </a>
               <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
+                <i class="fa fa-envelope" aria-hidden="true"></i> info@eclinichub.org
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i> Call : +31 34597406
