--- a/digweb/digweb/templates/persianPage/aboutpr.html
+++ b/digweb/digweb/templates/persianPage/aboutpr.html
@@ -156,7 +156,7 @@
                 <i class="fa fa-map-marker" aria-hidden="true"></i> مکان: اصفهان، استان اصفهان، خیابان استاد فلاطوری، مرکز خرید پاسارگاد
               </a>
               <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
+                <i class="fa fa-envelope" aria-hidden="true"></i> info@eclinichub.org
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i> شماره تماس :34597406-031
