add refrence and some changes

--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -163,7 +163,7 @@
             <div class="form-row ">
               
               <div class="form-group col-lg-4">
-                <label for="inputidnumber">id number </label>
+                <label for="inputidnumber">id number (optional)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
               </div>
             </div>
@@ -181,11 +181,19 @@
   <!-- end ckd section -->
 
   <!--  discription section -->
-  <section class="section_discribe">
+  <section class="section_discribe ">
     <div class="discribe">
       <br>
       <br>
       <p class ="text_result" id="discribe_text"> </p>
+    </div>
+
+    <div class="heading_container heading_center">
+      <h2>
+        <span class="design_dot"></span>
+        References and Sources:
+      </h2>
+      <a href="https://doi.org/10.1001/archinte.167.4.374">Bang H, Vupputuri S, Shoham DA, et al. SCreening for Occult REnal Disease (SCORED): a simple prediction model for chronic kidney disease. Arch Intern Med. 2007;167(4):374-381. doi:10.1001/archinte.167.4.374</a>
     </div>
   </section>
   <!-- end discription section -->
