--- a/digweb/digweb/templates/persianPage/aboutpr.html
+++ b/digweb/digweb/templates/persianPage/aboutpr.html
@@ -140,7 +140,7 @@
               خانه هوش مصنوعی
             </h5>
             <p>
-              خانه هوش مصنوعی یکی از زیرمجموعه های صنعت الکترواپتیک ایران (صاپا) است که با هدف توسعه هوش مصنوعی فعالیت می کند
+              خانه هوش مصنوعی که با هدف توسعه هوش مصنوعی فعالیت می کند
 
             </p>
           </div>
