--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -148,7 +148,7 @@
                 <br>
               </div>
               <div class="form-group col-lg-4">
-                <label for="inputidnumber">id number </label>
+                <label for="inputidnumber">id number (optional)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
               </div>
             </div>
@@ -170,6 +170,15 @@
       <br>
       <p class ="text_result" id="discribe_text"> </p>
     </div>
+
+    <div class="heading_container heading_center">
+      <h2>
+        <span class="design_dot"></span>
+        References and Sources:
+      </h2>
+      <a href="https://doi.org/10.1371/journal.pone.0189389">Sarrafzadegan N, Hassannejad R, Marateb HR, et al. PARS risk charts: A 10-year study of risk assessment for cardiovascular diseases in Eastern Mediterranean Region [published correction appears in PLoS One. 2018 Jan 25;13(1):e0191379]. PLoS One. 2017;12(12):e0189389. Published 2017 Dec 19. doi:10.1371/journal.pone.0189389</a>
+    </div>
+
   </section>
   <!-- end discription section -->
 
