--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -157,7 +157,7 @@
                 <label for="inputPatientDrugHistory" class="check-box">Do you have History of use Drug ?</label>
               </div>
               <div class="form-group col-lg-4">
-                <label for="inputidnumber">ID number </label>
+                <label for="inputidnumber">ID number (optional)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
               </div>
             </div>
@@ -178,6 +178,14 @@
     <br>
     <br>
     <p class ="text_result" id="discribe_text"> </p>
+  </div>
+
+  <div class="heading_container heading_center">
+    <h2>
+      <span class="design_dot"></span>
+      References and Sources:
+    </h2>
+    <a href="https://doi.org/10.2337/diacare.26.3.725">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
   </div>
 </section>
 <!-- end discription section -->
