--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -128,7 +128,7 @@
                 <br>
                 <br>
                 <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator">
-                <label for="inputPatientDrugHistory" class="check-box">Do you use related medicine?</label>
+                <label for="inputPatientDrugHistory" class="check-box">Do/did you use related medicine?</label>
               
                 
               </div>
@@ -190,7 +190,7 @@
               </div>
               <div class="form-group col-lg-4">
                 <br>
-                <label for="inputidnumber">id number</label>
+                <label for="inputidnumber">id number (optional)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(80, Math.min(9999999999, parseInt(this.value)));">
               </div>
             </div>
@@ -211,6 +211,17 @@
     <br>
     <br>
     <p class ="text_result" id="discribe_text"> </p>
+  </div>
+
+  <div class="heading_container heading_center">
+    <h2>
+      <span class="design_dot"></span>
+      References and Sources:
+    </h2>
+    <a href="https://doi.org/10.1161/01.str.22.3.312">Wolf PA, D'Agostino RB, Belanger AJ, Kannel WB. Probability of stroke: a risk profile from the Framingham Study. Stroke. 1991;22(3):312-318. doi:10.1161/01.str.22.3.312</a>
+    <br>
+    <a href="https://doi.org/10.1111%2Fijs.12411">Parmar P, Krishnamurthi R, Ikram MA, et al. The Stroke Riskometer(TM) App: validation of a data collection tool and stroke risk predictor. Int J Stroke. 2015;10(2):231-244. doi:10.1111/ijs.12411</a>
+
   </div>
 </section>
 <!-- end discription section -->
