--- a/digweb/digweb/templates/persianPage/diabetespr.html
+++ b/digweb/digweb/templates/persianPage/diabetespr.html
@@ -150,7 +150,7 @@
                 <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator" >
               </div>
               <div class="form-group col-lg-4">
-                <label for="inputidnumber">کد ملی </label>
+                <label for="inputidnumber">کد ملی (اختیاری)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
               </div>
             </div>
@@ -171,6 +171,14 @@
     <br>
     <br>
     <p class ="text_result" id="discribe_text"> </p>
+  </div>
+
+  <div class="heading_container heading_center">
+    <h2>
+      <span class="design_dot"></span>
+      مراجع و منابع:
+    </h2>
+    <a href="https://doi.org/10.2337/diacare.26.3.725">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
   </div>
 </section>
 <!-- end discription section -->
