change one parameter in strok

--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -128,7 +128,7 @@
                 <br>
                 <br>
                 <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator">
-                <label for="inputPatientDrugHistory" class="check-box">Do/did you use related medicine?</label>
+                <label for="inputPatientDrugHistory" class="check-box">Do you have any antihypertensive therapy?</label>
               
                 
               </div>
