--- a/digweb/digweb/templates/persianPage/strokepr.html
+++ b/digweb/digweb/templates/persianPage/strokepr.html
@@ -115,7 +115,7 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <label for="inputPatientDrugHistory" class="check-box">آیا داروی مرتبط استفاده می کنید ؟</label>
+                <label for="inputPatientDrugHistory" class="check-box">آیا تحت درمان ضد فشار خون هستید ؟</label>
                 <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator">
                 
               </div>
