change one parameter in diabetes and change hyperlink

--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -193,7 +193,7 @@
         <span class="design_dot"></span>
         References and Sources:
       </h2>
-      <a href="https://doi.org/10.1001/archinte.167.4.374">Bang H, Vupputuri S, Shoham DA, et al. SCreening for Occult REnal Disease (SCORED): a simple prediction model for chronic kidney disease. Arch Intern Med. 2007;167(4):374-381. doi:10.1001/archinte.167.4.374</a>
+      <a href="https://doi.org/10.1001/archinte.167.4.374" target="_blank">Bang H, Vupputuri S, Shoham DA, et al. SCreening for Occult REnal Disease (SCORED): a simple prediction model for chronic kidney disease. Arch Intern Med. 2007;167(4):374-381. doi:10.1001/archinte.167.4.374</a>
     </div>
   </section>
   <!-- end discription section -->
