--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -176,7 +176,7 @@
         <span class="design_dot"></span>
         References and Sources:
       </h2>
-      <a href="https://doi.org/10.1371/journal.pone.0189389">Sarrafzadegan N, Hassannejad R, Marateb HR, et al. PARS risk charts: A 10-year study of risk assessment for cardiovascular diseases in Eastern Mediterranean Region [published correction appears in PLoS One. 2018 Jan 25;13(1):e0191379]. PLoS One. 2017;12(12):e0189389. Published 2017 Dec 19. doi:10.1371/journal.pone.0189389</a>
+      <a href="https://doi.org/10.1371/journal.pone.0189389" target="_blank">Sarrafzadegan N, Hassannejad R, Marateb HR, et al. PARS risk charts: A 10-year study of risk assessment for cardiovascular diseases in Eastern Mediterranean Region [published correction appears in PLoS One. 2018 Jan 25;13(1):e0191379]. PLoS One. 2017;12(12):e0189389. Published 2017 Dec 19. doi:10.1371/journal.pone.0189389</a>
     </div>
 
   </section>
