--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -75,7 +75,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'cvdpr_page'%}"> persian language </a>
+                <a class="nav-link" href="{% url 'diabetespr_page'%}"> persian language </a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -154,7 +154,7 @@
                 <br>
                 <br>
                 <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator" >
-                <label for="inputPatientDrugHistory" class="check-box">Do you have History of use Drug ?</label>
+                <label for="inputPatientDrugHistory" class="check-box">Do you Use of blood pressure medication ?</label>
               </div>
               <div class="form-group col-lg-4">
                 <label for="inputidnumber">ID number (optional)</label>
@@ -185,7 +185,7 @@
       <span class="design_dot"></span>
       References and Sources:
     </h2>
-    <a href="https://doi.org/10.2337/diacare.26.3.725">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
+    <a href="https://doi.org/10.2337/diacare.26.3.725" target="_blank">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
   </div>
 </section>
 <!-- end discription section -->
