--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -218,9 +218,9 @@
       <span class="design_dot"></span>
       References and Sources:
     </h2>
-    <a href="https://doi.org/10.1161/01.str.22.3.312">Wolf PA, D'Agostino RB, Belanger AJ, Kannel WB. Probability of stroke: a risk profile from the Framingham Study. Stroke. 1991;22(3):312-318. doi:10.1161/01.str.22.3.312</a>
+    <a href="https://doi.org/10.1161/01.str.22.3.312" target="_blank">Wolf PA, D'Agostino RB, Belanger AJ, Kannel WB. Probability of stroke: a risk profile from the Framingham Study. Stroke. 1991;22(3):312-318. doi:10.1161/01.str.22.3.312</a>
     <br>
-    <a href="https://doi.org/10.1111%2Fijs.12411">Parmar P, Krishnamurthi R, Ikram MA, et al. The Stroke Riskometer(TM) App: validation of a data collection tool and stroke risk predictor. Int J Stroke. 2015;10(2):231-244. doi:10.1111/ijs.12411</a>
+    <a href="https://doi.org/10.1111%2Fijs.12411" target="_blank">Parmar P, Krishnamurthi R, Ikram MA, et al. The Stroke Riskometer(TM) App: validation of a data collection tool and stroke risk predictor. Int J Stroke. 2015;10(2):231-244. doi:10.1111/ijs.12411</a>
 
   </div>
 </section>
