--- a/digweb/digweb/templates/persianPage/diabetespr.html
+++ b/digweb/digweb/templates/persianPage/diabetespr.html
@@ -146,7 +146,7 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <label for="inputPatientDrugHistory" class="check-box">آیا سابقه مصرف داروی مرتبط دارید ؟</label>
+                <label for="inputPatientDrugHistory" class="check-box">آیا از داروهای فشار خون استفاده می کنید؟</label>
                 <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator" >
               </div>
               <div class="form-group col-lg-4">
@@ -178,7 +178,7 @@
       <span class="design_dot"></span>
       مراجع و منابع:
     </h2>
-    <a href="https://doi.org/10.2337/diacare.26.3.725">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
+    <a href="https://doi.org/10.2337/diacare.26.3.725" target="_blank">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
   </div>
 </section>
 <!-- end discription section -->
