change ckd page

--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -140,7 +140,7 @@
                 <br>
                 <br>
                 <input type="checkbox" id="inputPationtHistoryCVD" name="inputPationtHistoryCVD" value="1" class="control__indicator">
-                <label for="inputPationtHistoryCVD">Do you have History of cardiovascular disease ? </label>
+                <label for="inputPationtHistoryCVD">Do you have cardiovascular disease ? </label>
                 </div>
             </div>
 
