--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -129,7 +129,7 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <label for="inputPationtHistoryCVD">آیا سابقه بیماری قلبی و عروقی دارید ؟ </label>
+                <label for="inputPationtHistoryCVD">آیا بیماری قلبی و عروقی دارید ؟ </label>
                 <input type="checkbox" id="inputPationtHistoryCVD" name="inputPationtHistoryCVD" value="1" class="control__indicator">  
               </div>
             </div>
