change ckd page

--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -140,7 +140,7 @@
                 <br>
                 <br>
                 <input type="checkbox" id="inputPationtHistoryCVD" name="inputPationtHistoryCVD" value="1" class="control__indicator">
-                <label for="inputPationtHistoryCVD">Do you have cardiovascular disease ? </label>
+                <label for="inputPationtHistoryCVD">Do you have history of cardiovascular disease* ? </label>
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
               <div class="form-group col-lg-4">
                 
                 <input type="checkbox" id="inputPationtHistoryCHF" name="inputPationtHistoryCHF" value="1" class="control__indicator">
-                <label for="inputPationtHistoryCHF">Do you have history of Congestive heart failure ?</label>
+                <label for="inputPationtHistoryCHF">Do you have history of Congestive heart failure* ?</label>
               </div>
               <div class="form-group col-lg-4">
                 <input type="checkbox" id="inputPationtPVD" name="inputPationtPVD" value="1" class="control__indicator">
@@ -166,6 +166,16 @@
                 <label for="inputidnumber">id number (optional)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
               </div>
+
+              <div class="form-group col-lg-4">
+                
+              </div>
+
+              <div class="form-group col-lg-4">
+                <br><br>
+              <p>*please enter personal history not family history </p> 
+              </div>
+
             </div>
             
 
