--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -129,7 +129,7 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <label for="inputPationtHistoryCVD">آیا بیماری قلبی و عروقی دارید ؟ </label>
+                <label for="inputPationtHistoryCVD">آیا سابقه بیماری قلبی و عروقی دارید* ؟ </label>
                 <input type="checkbox" id="inputPationtHistoryCVD" name="inputPationtHistoryCVD" value="1" class="control__indicator">  
               </div>
             </div>
@@ -137,7 +137,7 @@
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 
-                <label for="inputPationtHistoryCHF">آیا سابقه نارسایی احتقانی قلب دارید؟</label>
+                <label for="inputPationtHistoryCHF">آیا سابقه نارسایی احتقانی قلب دارید*؟</label>
                 <input type="checkbox" id="inputPationtHistoryCHF" name="inputPationtHistoryCHF" value="1" class="control__indicator">
               </div>
               <div class="form-group col-lg-4">
@@ -155,6 +155,14 @@
               <div class="form-group col-lg-4">
                 <label for="inputidnumber">کد ملی (اختیاری)</label>
                 <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
+              </div>
+              <div class="form-group col-lg-4">
+                
+              </div>
+
+              <div class="form-group col-lg-4">
+                <br><br>
+              <p>لطفا سابقه شخصی را وارد کنید نه سابقه خانوادگی* </p> 
               </div>
             </div>
 
