change some text

--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -163,7 +163,7 @@
             </div>
 
             <div class="btn-box">
-              <button type="submit" class="btn" onclick="diabetes_Results();">Calculate Now</button>
+              <button type="submit" class="btn" onclick="diabetes_Results();">Calculate </button>
             </div>
           </form>
         </div>
@@ -278,7 +278,7 @@
               AI TEC
             </h5>
             <p>
-              AI TEC which works with the purpose of developing artificial intelligence
+              Our goal at AI TEC is to push the boundaries of AI, developing innovative solutions that translate research into real-world impact across various domains.
 
             </p>
           </div>
