--- a/digweb/digweb/templates/openVeiw/digitalhealth.html
+++ b/digweb/digweb/templates/openVeiw/digitalhealth.html
@@ -148,7 +148,7 @@
               AI TEC
             </h5>
             <p>
-              AI TEC which works with the purpose of developing artificial intelligence
+              Our goal at AI TEC is to push the boundaries of AI, developing innovative solutions that translate research into real-world impact across various domains.
 
             </p>
           </div>
