--- a/digweb/digweb/templates/persianPage/servicepr.html
+++ b/digweb/digweb/templates/persianPage/servicepr.html
@@ -192,7 +192,7 @@
               خانه هوش مصنوعی
             </h5>
             <p>
-              خانه هوش مصنوعی که با هدف توسعه هوش مصنوعی فعالیت می کند
+              هدف ما در خانه هوش مصنوعی این است که مرزهای هوش مصنوعی را پیش ببریم و راه حل های نوآورانه ای را توسعه دهیم که تحقیقات را به تأثیرات دنیای واقعی در حوزه های مختلف تبدیل کند
 
             </p>
           </div>
