--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -180,7 +180,7 @@
             
 
             <div class="btn-box">
-              <button type="submit" class="btn " onclick="ckd_Results();">Calculate Now</button>
+              <button type="submit" class="btn " onclick="ckd_Results();">Calculate </button>
             </div>
           </form>
         </div>
@@ -295,7 +295,7 @@
               AI TEC
             </h5>
             <p>
-              AI TEC which works with the purpose of developing artificial intelligence
+              Our goal at AI TEC is to push the boundaries of AI, developing innovative solutions that translate research into real-world impact across various domains.
 
             </p>
           </div>
