--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -153,7 +153,7 @@
               </div>
             </div>
             <div class="btn-box">
-              <button type="submit" class="btn " onclick="cvd_Results();">Calculate Now</button>
+              <button type="submit" class="btn " onclick="cvd_Results();">Calculate </button>
             </div>
           </form>
         </div>
@@ -271,7 +271,7 @@
               AI TEC
             </h5>
             <p>
-              AI TEC which works with the purpose of developing artificial intelligence
+              Our goal at AI TEC is to push the boundaries of AI, developing innovative solutions that translate research into real-world impact across various domains.
 
             </p>
           </div>
