--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -196,7 +196,7 @@
             </div>
 
             <div class="btn-box">
-              <button type="submit" class="btn " onclick="stroke_Results();">Calculate Now</button>
+              <button type="submit" class="btn " onclick="stroke_Results();">Calculate </button>
             </div>
           </form>
         </div>
@@ -315,7 +315,7 @@
               AI TEC
             </h5>
             <p>
-              AI TEC which works with the purpose of developing artificial intelligence
+              Our goal at AI TEC is to push the boundaries of AI, developing innovative solutions that translate research into real-world impact across various domains.
 
             </p>
           </div>
