--- a/digweb/digweb/templates/persianPage/cvdpr.html
+++ b/digweb/digweb/templates/persianPage/cvdpr.html
@@ -261,7 +261,7 @@ var page_number=1;
               خانه هوش مصنوعی
             </h5>
             <p>
-              خانه هوش مصنوعی که با هدف توسعه هوش مصنوعی فعالیت می کند
+              هدف ما در خانه هوش مصنوعی این است که مرزهای هوش مصنوعی را پیش ببریم و راه حل های نوآورانه ای را توسعه دهیم که تحقیقات را به تأثیرات دنیای واقعی در حوزه های مختلف تبدیل کند
 
             </p>
           </div>
