change some text

--- a/digweb/digweb/templates/persianPage/cvdpr.html
+++ b/digweb/digweb/templates/persianPage/cvdpr.html
@@ -164,8 +164,9 @@ var page_number=1;
 
     <div class="heading_container heading_center">
       <h2>
+        :مراجع و منابع
         <span class="design_dot"></span>
-        مراجع و منابع:
+
       </h2>
       <a href="https://doi.org/10.1371/journal.pone.0189389" target="_blank">Sarrafzadegan N, Hassannejad R, Marateb HR, et al. PARS risk charts: A 10-year study of risk assessment for cardiovascular diseases in Eastern Mediterranean Region [published correction appears in PLoS One. 2018 Jan 25;13(1):e0191379]. PLoS One. 2017;12(12):e0189389. Published 2017 Dec 19. doi:10.1371/journal.pone.0189389</a>
     </div>
