--- a/digweb/digweb/templates/persianPage/strokepr.html
+++ b/digweb/digweb/templates/persianPage/strokepr.html
@@ -206,8 +206,8 @@
 
   <div class="heading_container heading_center">
     <h2>
+      :مراجع و منابع
       <span class="design_dot"></span>
-      مراجع و منابع:
     </h2>
     <a href="https://doi.org/10.1161/01.str.22.3.312" target="_blank">Wolf PA, D'Agostino RB, Belanger AJ, Kannel WB. Probability of stroke: a risk profile from the Framingham Study. Stroke. 1991;22(3):312-318. doi:10.1161/01.str.22.3.312</a>
     <br>
