--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -187,8 +187,8 @@
 
     <div class="heading_container heading_center">
       <h2>
+        :مراجع و منابع
         <span class="design_dot"></span>
-        مراجع و منابع:
       </h2>
       <a href="https://doi.org/10.1001/archinte.167.4.374" target="_blank">Bang H, Vupputuri S, Shoham DA, et al. SCreening for Occult REnal Disease (SCORED): a simple prediction model for chronic kidney disease. Arch Intern Med. 2007;167(4):374-381. doi:10.1001/archinte.167.4.374</a>
     </div>
