--- a/digweb/digweb/templates/persianPage/diabetespr.html
+++ b/digweb/digweb/templates/persianPage/diabetespr.html
@@ -175,8 +175,9 @@
 
   <div class="heading_container heading_center">
     <h2>
+      :مراجع و منابع
       <span class="design_dot"></span>
-      مراجع و منابع:
+
     </h2>
     <a href="https://doi.org/10.2337/diacare.26.3.725" target="_blank">Lindström J, Tuomilehto J. The diabetes risk score: a practical tool to predict type 2 diabetes risk. Diabetes Care. 2003;26(3):725-731. doi:10.2337/diacare.26.3.725</a>
   </div>
