add alzheimer disease to site

--- a/digweb/digweb/Static/css/function_persian.css
+++ b/digweb/digweb/Static/css/function_persian.css
@@ -270,6 +270,15 @@ align-items: right;
 }
 /* end of cvd section */
 
+/* alzheimer section */
+.alzheimerpr_section {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(86, 188, 164, 0.55)), to(rgba(86, 188, 164, 0.55))), url(../images/alzheimer.jpg);
+  background-image: linear-gradient(to right, rgba(86, 188, 164, 0.55), rgba(86, 188, 164, 0.55)), url(../images/alzheimer.jpg);
+  background-size: cover;
+  color: #000000;
+}
+/* end of alzheimer section */
+
 /* sub header page */
 /*header section*/
 .hero_area {
