--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -134,10 +134,10 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <a href="{% url 'under_page'%}">
+            <a href="{% url 'alzheimer_page'%}">
               <img src="{% static 'images/s5.png' %}" alt="" />
               <br>
-              Therapy
+              Alzheimer 
             </a>
           </div>
         </div>
