--- a/digweb/digweb/templates/persianPage/alzheimerpr.html
+++ b/digweb/digweb/templates/persianPage/alzheimerpr.html
@@ -1,9 +1,10 @@
-
 {% load static %}
 
 <!DOCTYPE html>
 <html>
-
+<script>
+    var page_number=1;
+</script>
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -16,7 +17,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
-  <title>خدمات | خانه هوش مصنوعی </title>
+  <title>خانه هوش مصنوعی | محاسبه ریسک دیابت</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
@@ -31,6 +32,10 @@
   <link href="{% static 'css/function_persian.css' %}" rel="stylesheet" />
   <!-- responsive style -->
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
+  <!-- java script function for calculate risk  -->
+  <script src="{% static 'js/function_disease.js' %}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body class="sub_page">
@@ -60,7 +65,7 @@
                 <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> زبان انگلیسی</a>
+                <a class="nav-link" href="{% url 'alzheimer_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -75,13 +80,112 @@
     <!-- end header section -->
   </div>
 
+  <!-- alzhiemer section -->
+
+  <section class="persian_disease_section alzheimerpr_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <form id="post-alzheimer" >{%csrf_token%}
+            <h4>
+              پیش بینی ریسک آلزایمر
+              <span class="design_dot"></span>
+            </h4>
+            <div class="form-row ">
+                <div class="form-group col-lg-4">
+                  <label for="inputPatientAge">سن </label>
+                  <input type="number" class="form-control" id="inputPatientAge" name="inputPatientAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
+                </div>
+
+                <div class="form-group col-lg-4">
+                    <label for="inputPatientGender">جنسیت</label>
+                    <select name="inputPatientGender" class="form-control wide" id="inputPatientGender">
+                      <option value=0>زن</option>
+                      <option value=1>مرد </option>
+                    </select>
+                  </div>
+
+                  <div class="form-group col-lg-4">
+                    <label for="inputPatientEducation">تحصیلات</label>
+                    <select name="inputPatientEducation" class="form-control wide" id="inputPatientEducation">
+                      <option value=0>بیشتر از 10 سال</option>
+                      <option value=1>بین 7 تا 9 سال </option>
+                      <option value=2>کمتر از 6 سال </option>
+                    </select>
+                  </div>
+            </div>
+            <div class="form-row ">
+                <div class="form-group col-lg-4">
+                    <label for="inputPatientWeight">وزن (کیلو گرم) </label>
+                    <input type="number" name="inputPatientWeight" class="form-control" id="inputPatientWeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
+                  </div>
+                  <div class="form-group col-lg-4">
+                    <label for="inputPatientHeight">قد (سانتی متر)</label>
+                    <input type="number" name="inputPatientHeight" class="form-control" id="inputPatientHeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(300, parseInt(this.value)));">
+                  </div>
+              
+                  <div class="form-group col-lg-4">
+                    <label for="inputPatientSBP">فشار خون سیستولیک (میلی متر جیوه) </label>
+                    <input type="number" class="form-control" id="inputPatientSBP" name="inputPatientSBP" placeholder="" step="1" onchange="this.value = Math.max(80, Math.min(220, parseInt(this.value)));">
+                  </div>
+            </div>
+
+            <div class="form-row ">
+                <div class="form-group col-lg-4">
+                    <label for="inputPatientCholesterol">میزان کلستروا (میلی مول بر لیتر)</label>
+                    <select name="inputPatientCholesterol" class="form-control wide" id="inputPatientCholesterol">
+                      <option value=0>کمتر از 6.5</option>
+                      <option value=1>بیشتر از 6.5 </option>
+                    </select>
+                  </div>
+                  <div class="form-group col-lg-4">
+                    <br>
+                    <input type="checkbox" id="inputPationtPhysicalActivity" name="inputPationtPhysicalActivity" value="1" class="control__indicator">
+                    <label for="inputPationtPhysicalActivity">آیا در طول روز بیشتر از 10 دقیقه فعالیت بدنی دارید؟</label>
+                  </div>
+
+                  <div class="form-group col-lg-4">
+                    <label for="inputidnumber">کد ملی (اختیاری)</label>
+                    <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
+                  </div>
+            </div>
+
+            <div class="btn-box">
+              <button type="submit" class="btn " onclick="alzheimer_Results(page_number);">محاسبه ریسک</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end alzhiemer section -->
+<!--  discription section -->
+<section class="section_discribe">
+  <div class="discribe">
+    <br>
+    <br>
+    <p class ="text_result" id="discribe_text"> </p>
+  </div>
+
+  <div class="heading_container heading_center">
+    <h2>
+      :مراجع و منابع
+      <span class="design_dot"></span>
+
+    </h2>
+    <a href="https://doi.org/10.3233/jad-190925" target="_blank">Rundek T, Gardener H, Dias Saporta AS, et al. Global Vascular Risk Score and CAIDE Dementia Risk Score Predict Cognitive Function in the Northern Manhattan Study. J Alzheimers Dis. 2020;73(3):1221-1231. doi:10.3233/JAD-190925</a>
+  </div>
+</section>
+<!-- end discription section -->
+
   <!-- service section -->
 
   <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          خدمات ما
+          دیگر خدمات ما
           <span class="design_dot"></span>
         </h2>
         <p>
@@ -89,9 +193,9 @@
         </p>
       </div>
       <div class="row">
-        <div class="col-md-2">
 
-        </div>
+       
+        
         <div class="col-md-4 mx-auto">
           <div class="box">
             <a href="{% url 'cvdpr_page'%}">
@@ -101,27 +205,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <a href="{% url 'diabetespr_page'%}">
-              <img src="{% static 'images/s2.png' %}" alt="" />
-              <br>
-              پیش بینی بیماری دیابت
-            </a>
-          </div>
-        </div>
-        <div class="col-md-2">
 
-        </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <a href="{% url 'ckdpr_page'%}">
-              <img src="{% static 'images/s3.png' %}" alt="" />
-              <br>
-              پیش بینی بیماری مزمن کلیوی
-            </a>
-          </div>
-        </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
             <a href="{% url 'strokepr_page'%}">
@@ -131,18 +215,20 @@
             </a>
           </div>
         </div>
+
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <a href="{% url 'alzheimerpr_page'%}">
-              <img src="{% static 'images/s5.png' %}" alt="" />
+            <a href="{% url 'ckdpr_page'%}">
+              <img src="{% static 'images/s3.png' %}" alt="" />
               <br>
-              آلزایمر
+              پیش بینی بیماری کلیوی
             </a>
           </div>
         </div>
       </div>
+
       <div class="btn-box">
-        <a href="">
+        <a href="{% url 'servicepr_page'%}">
           نمایش همه
         </a>
       </div>
@@ -150,17 +236,6 @@
   </section>
 
   <!-- end service section -->
-
-  <!-- map section -->
-
-  <section class="map_section">
-    <div class="map">
-      <div id="googleMap"></div>
-    </div>
-  </section>
-
-  <!-- end map section -->
-
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
@@ -181,7 +256,7 @@
                 <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> زبان انگلیسی</a>
+                <a class="nav-link" href="{% url 'alzheimer_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
           </div>
@@ -239,19 +314,33 @@
   </footer>
   <!-- footer section -->
 
-  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.js' %}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <!-- nice select -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
-  <!-- datepicker -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
-  <!-- custom js -->
-  <script src="{% static 'js/custom.js' %}"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
 </body>
-
+<script type="text/javascript">
+    $(document).on('submit','#post-alzheimer',function(e){
+      e.preventDefault();
+      $.ajax({
+        type:'POST',
+        url:'create/',
+        data:{
+          inputidnumber:$('#inputidnumber').val(),
+          inputPatientAge:$('#inputPatientAge').val(),
+          inputPatientGender:$('#inputPatientGender').val(),
+          inputPatientWeight:$('#inputPatientWeight').val(),
+          inputPatientHeight:$('inputPatientHeight').val(),
+          inputPatientEducation:$('#inputPatientEducation').val(),
+          inputPatientSBP:$('#inputPatientSBP').val(),
+          inputPatientCholesterol:$('#inputPatientCholesterol').val(),
+  
+          inputPationtPhysicalActivity:($("#inputPationtPhysicalActivity:checked").prop("checked") == true ? 1 : 0),
+          csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val()
+  
+        },
+        success: function (){
+  
+        }
+      });
+    });
+  
+    
+  </script>
 </html>
