--- a/digweb/digweb/Static/css/function_style.scss
+++ b/digweb/digweb/Static/css/function_style.scss
@@ -285,3 +285,75 @@ $primary2: #35806e;
 
 
 
+// hiv section
+
+.hiv_section {
+  
+  background-image: linear-gradient(to right,
+      rgba($color: $primary1, $alpha: 0.55),
+      rgba($color: $primary1, $alpha: 0.55)),
+    url(../images/hiv.jpg);
+  background-size: cover;
+  color: $black;
+
+  form {
+    padding: 35px 45px;
+    background-color: rgba($color: $white, $alpha: 0.95);
+    box-shadow: 0 0 15px 10px rgba($color: #000000, $alpha: 0.07);
+
+    h4 {
+      font-weight: 600;
+      position: relative;
+      margin-bottom: 25px;
+      display: flex;
+      align-items: center;
+
+      .design_dot {
+        width: 15px;
+        height: 15px;
+        border-radius: 100%;
+        background-color: #4bc5b8;
+        margin-right: 5px;
+      }
+    }
+
+    label {
+      color: $black;
+    }
+
+    .form-control {
+      width: 100%;
+      background-color: transparent;
+      // border: 1px solid $primary1;
+      border: none;
+      background-color: #deece9;
+      height: 45px;
+      outline: none;
+      box-shadow: none;
+      border-radius: 5px;
+      padding: 0 15px;
+      color: $black;
+
+      &::placeholder {
+        color: $black;
+      }
+    }
+
+
+
+    button.btn {
+      background-color: $primary2;
+      color: #ffffff;
+      padding: 10px 45px;
+      border-radius: 5px;
+      margin-top: 10px;
+      text-transform: uppercase;
+    }
+  }
+
+}
+
+// end hiv section
+
+
+
