Add HIV disease to website

--- a/digweb/digweb/templates/openVeiw/hiv.html
+++ b/digweb/digweb/templates/openVeiw/hiv.html
@@ -241,7 +241,7 @@
         <span class="design_dot"></span>
         References and Sources:
       </h2>
-      <a href="https://www.linkedin.com/in/zakaria-rajabi/" target="_blank">PREDICT-HIV: Proactive Recognition and Early Detection in Communities through Targeted HIV Screening</a>
+      <a href="" target="_blank">PREDICT-HIV: Proactive Recognition and Early Detection in Communities through Targeted HIV Screening</a>
     </div>
 
   </section>
