--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -22,8 +22,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
   <title>AI TEC | CKD predictor </title>
