Add: google analysis

--- a/digweb/digweb/templates/openVeiw/alzheimer.html
+++ b/digweb/digweb/templates/openVeiw/alzheimer.html
@@ -327,7 +327,11 @@
   </footer>
   <!-- footer section -->
 
-</body>
+  <!-- Google tag (gtag.js) --> 
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-85SVNV66K4"></script> 
+   <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-85SVNV66K4'); </script>
+  <!-- End Google tag (gtag.js) --> 
+  </body>
 <script type="text/javascript">
   $(document).on('submit','#post-alzheimer',function(e){
     e.preventDefault();
