--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -342,6 +342,11 @@
   </footer>
   <!-- footer section -->
 
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1Y3VS610EP"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-1Y3VS610EP'); </script>
+  <!-- End Google tag (gtag.js) --> 
+
 </body>
 <script type="text/javascript">
   $(document).on('submit','#post-ckd',function(e){
