--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -324,7 +324,10 @@
     </div>
   </footer>
   <!-- footer section -->
-
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QRCWC7T1FE"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QRCWC7T1FE'); </script>
+  <!-- End Google tag (gtag.js) --> 
 </body>
 <script type="text/javascript">
   $(document).on('submit','#post-diabetes',function(e){
