--- a/digweb/digweb/templates/persianPage/alzheimerpr.html
+++ b/digweb/digweb/templates/persianPage/alzheimerpr.html
@@ -313,6 +313,10 @@
     </div>
   </footer>
   <!-- footer section -->
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS7L1E1E9"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-HCS7L1E1E9'); </script>
+  <!-- End Google tag (gtag.js) --> 
 
 </body>
 <script type="text/javascript">
