--- a/digweb/digweb/templates/persianPage/cvdpr.html
+++ b/digweb/digweb/templates/persianPage/cvdpr.html
@@ -308,7 +308,10 @@ var page_number=1;
     </div>
   </footer>
   <!-- footer section -->
-
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EM4D6NV4GL"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-EM4D6NV4GL'); </script>
+  <!-- End Google tag (gtag.js) --> 
 </body>
 <script type="text/javascript">
   $(document).on('submit','#post-cvd',function(e){
