--- a/digweb/digweb/templates/persianPage/strokepr.html
+++ b/digweb/digweb/templates/persianPage/strokepr.html
@@ -352,7 +352,11 @@
     </div>
   </footer>
   <!-- footer section -->
-
+   
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-885CPH7R6R"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-885CPH7R6R'); </script>
+  <!-- End Google tag (gtag.js) --> 
 </body>
 <script type="text/javascript">
   $(document).on('submit','#post-stroke',function(e){
