--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -317,6 +317,10 @@
     </div>
   </footer>
   <!-- footer section -->
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D0HZ08KDBC"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-D0HZ08KDBC'); </script>
+  <!-- End Google tag (gtag.js) --> 
 
 </body>
 <script type="text/javascript">
