--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -253,6 +253,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGJMJBRRHC"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-FGJMJBRRHC'); </script>
+  <!-- End Google tag (gtag.js) --> 
 </body>
 
 </html>
