--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -361,7 +361,11 @@
     </div>
   </footer>
   <!-- footer section -->
-
+   
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NM3LSYZ63Y"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NM3LSYZ63Y'); </script>
+  <!-- End Google tag (gtag.js) -->
 </body>
 <script type="text/javascript">
   $(document).on('submit','#post-stroke',function(e){
