--- a/digweb/digweb/templates/persianPage/aboutpr.html
+++ b/digweb/digweb/templates/persianPage/aboutpr.html
@@ -201,6 +201,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WG8MB3NWBC"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-WG8MB3NWBC'); </script>
+  <!-- End Google tag (gtag.js) -->
 </body>
 
 </html>
