--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -329,6 +329,10 @@
   </footer>
   <!-- footer section -->
 
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-86178GKW9J"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-86178GKW9J'); </script>
+  <!-- End Google tag (gtag.js) --> 
 </body>
 <script type="text/javascript">
   $(document).on('submit','#post-ckd',function(e){
