--- a/digweb/digweb/templates/persianPage/diabetespr.html
+++ b/digweb/digweb/templates/persianPage/diabetespr.html
@@ -318,6 +318,10 @@
     </div>
   </footer>
   <!-- footer section -->
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JN3R61460R"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-JN3R61460R'); </script>
+  <!-- End Google tag (gtag.js) --> 
 
 </body>
 <script type="text/javascript">
