--- a/digweb/digweb/templates/persianPage/indexpr.html
+++ b/digweb/digweb/templates/persianPage/indexpr.html
@@ -790,6 +790,12 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
+   
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FD4MZTM33L"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-FD4MZTM33L'); </script>
+  <!-- End Google tag (gtag.js) --> 
+
 </body>
 
 </html>
