--- a/digweb/digweb/templates/persianPage/servicepr.html
+++ b/digweb/digweb/templates/persianPage/servicepr.html
@@ -252,6 +252,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNHWY28F8L"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-SNHWY28F8L'); </script>
+  <!-- End Google tag (gtag.js) --> 
 </body>
 
 </html>
